finish taming process classes and add two taming process implementations